--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crossref-xml-editor",
   "version": "1.0.44",
   "private": true,
+  "homepage": "https://amastaneh.github.io/crossref-xml-editor",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -9,11 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "fast-xml-parser": "^4.0.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
+    "save-dev": "^0.0.1-security",
     "sweetalert2": "^11.4.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -22,7 +25,9 @@
     "start": "npm version patch --no-git-tag-version && set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
