Add version to footer

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#HTTPS=true
-#REACT_APP_URL="https://amastaneh.github.io/crossref-xml-editor"
+HTTPS=true
+REACT_APP_URL="https://amastaneh.github.io/crossref-xml-editor/"
