--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-#HTTPS=true
+HTTPS=false
 
 # On windows 
 #SSL_CRT_FILE="./.certs/local.crt"
@@ -8,4 +8,4 @@
 #SSL_CRT_FILE="./.cert/cert.pem" 
 #SSL_KEY_FILE="./.cert/key.pem" 
 
-#REACT_APP_URL="https://localhost:3001"
+REACT_APP_URL="http://localhost:3001"
