--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-HTTPS=true
+#HTTPS=true
+PUBLIC_URL="https://amastaneh.github.io/crossref-xml-editor/"
 REACT_APP_URL="https://amastaneh.github.io/crossref-xml-editor/"
