--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-HTTPS=false
+#HTTPS=false
 
 # On windows 
 #SSL_CRT_FILE="./.certs/local.crt"
@@ -8,4 +8,5 @@ HTTPS=false
 #SSL_CRT_FILE="./.cert/cert.pem" 
 #SSL_KEY_FILE="./.cert/key.pem" 
 
+PUBLIC_URL="http://localhost:3001"
 REACT_APP_URL="http://localhost:3001"
