--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "crossref-xml-editor",
-  "version": "1.0.49",
+  "version": "1.0.50",
   "private": true,
-  "homepage": "/",
+  "homepage": "./crossref-xml-editor/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.2",
