--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,4 @@
 #SSL_KEY_FILE="./.cert/key.pem" 
 
 PUBLIC_URL="http://localhost:3001"
-REACT_APP_URL="http://localhost:3001"
+#REACT_APP_URL="http://localhost:3001"
