--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: amastaneh
+github: [amastaneh]
 patreon: # Replace with a single Patreon username
 open_collective: amastaneh
 ko_fi: amastaneh
