--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crossref-xml-editor",
-  "version": "1.0.61",
+  "version": "1.0.68",
   "private": true,
   "homepage": "https://amastaneh.github.io/crossref-xml-editor",
   "dependencies": {
@@ -9,7 +9,8 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "fast-xml-parser": "^4.0.3",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,9 +18,11 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "save-dev": "^0.0.1-security",
+    "stream": "^0.0.2",
     "sweetalert2": "^11.4.0",
+    "timers": "^0.1.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "npm version patch --no-git-tag-version && set PORT=3001 && react-scripts start",
