--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Crossref XML Editor",
+  "short_name": "Crossref - Article from Issue XML",
   "name": "Export articles from Crossref Issue XML",
   "icons": [
     {
